Fix z-index

--- a/src/style.scss
+++ b/src/style.scss
@@ -71,6 +71,7 @@
     max-height: calc(100vh - 10px);
     position: absolute;
     width: calc(100vw - 20px);
+    z-index: 1;
 
     .assist-dialog-config-text {
       height: calc(100% - 2em);
